Document self-test command